# FMSynth

./: .gitignore  .gitmodules  CMakeLists.txt  codecov.yml
.github/workflows/: build_and_test.yml
Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  fm_Parameters.h  fm_SynthEngine.cpp  fm_SynthEngine.h  fm_SynthVoice.h
Tests/: CMakeLists.txt  Test.cpp  Voice_test.cpp
